--- a/mooks.css
+++ b/mooks.css
@@ -1,3 +1,73 @@
+/* カラーピッカー設定 */
+
+div.mookColorPicker {
+  position: absolute;
+  top: 20%;
+  left: 40%;
+  z-index: 100;
+  border: solid #777777; 
+  background-color: #ffffff;
+  width: 12rem;
+  height: 20rem;
+  padding: 0.5rem;
+}
+
+div.color-pallete {
+  height: 3rem;
+  width: 12rem;
+  margin-bottom: 0.5rem;
+}
+
+li.square-mark {
+  cursor: pointer;
+  position: relative;
+  margin: 0; 
+  padding: 0;
+  height: 1rem;
+  width: 1rem;
+  border: solid #ffffff 0.1rem;
+  list-style-type: none;
+}
+
+li.square-mark:hover {
+  border: solid #000000 0.1rem;
+}
+
+div.pick-type {
+  cursor: pointer;
+  background-color: #ffffff;
+}
+
+
+div.pick-type:hover {
+  background-color: #82837b8e;
+}
+
+div.mookColorPicker > div.main-btns {
+  position: relative; 
+  top: 0.5rem; 
+  left: -0.5rem;
+  display: table; 
+  width: 108%; 
+  height: 2rem;
+}
+
+div.mookColorPicker > div.main-btns > div {
+  cursor: pointer;
+  display: table-cell; 
+  width: 50%; 
+  padding:2% 0 0 15%;
+}
+
+div.mookColorPicker > div.main-btns > div:hover {
+  background-color: #8b8b8b;
+  border: solid #5e5a5a 0.2rem;
+
+}
+
+/* カラーピッカー終了 */
+
+
 /* かっこいいフォントだけど日本語には非対応　orz */
 /* Menlo, Monaco, Consolas, "Courier New", monospace */
 
